--- a/src/components/screens/Header.css
+++ b/src/components/screens/Header.css
@@ -9,13 +9,21 @@ nav {
 .nav-bar {
     border: 2px solid black;
     display: flex;
-    justify-content: space-between;
+    /* flex-direction: column; */
+    justify-content: space-evenly;
     width: 50vw;
     align-items: flex-end;
-    font-size: 20px;
+    font-size: 30px;
+    padding-bottom: 20px;
+
 }
 
 .nav-bar a {
     text-decoration: none;
     color: white;
+}
+
+.logo {
+    width: 10%;
+    height:10%
 }
