--- a/src/components/screens/Movies.css
+++ b/src/components/screens/Movies.css
@@ -1,4 +1,48 @@
+.movies {
+    margin: 0;
+    padding: 0;
+}
+
 .movieAdd {
-    color: black
+    color: black;
+    border: 2px solid black
+}
+
+.moviePoster {
+    border: 2px solid blue;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    background-color: rgb(47, 44, 63);
+    justify-content: space-between;
+
+} 
+
+.moviePoster h1 {
+    font-size: 40px;
+    margin-top: 10px;
+}
+
+.moviePoster img {
+    width: 100%;
+    height: 100%;
+}
+
+.moviePoster h2 {
+    font-size: 15px;
+    word-break: normal;
+}
+
+.movie-container .image-url {
+    width: 50%;
+    height: 50%;
+
+}
+
+.movie-container {
+    border: 2px solid black;
+    width: 30vw;
+    background-color: #ceb992;
+    margin: 20px
 }
 
