--- a/src/components/screens/AddMovie.css
+++ b/src/components/screens/AddMovie.css
@@ -6,8 +6,25 @@
 
 .top {
     margin: 0;
-    border: 2px solid blue
+    border: 2px solid rgb(82, 82, 155)
 
+}
+
+form {
+    margin: 0 auto;
+    display: flex;
+	flex-direction: column;
+	width: 80%;
+	margin-top: 5%;
+	background-color: #f8f8f8;
+	border-radius: 4px;
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4);
+	padding-top: 1em;
+}
+
+form input {
+	margin: 1em auto;
+	width: 80%;
 }
 
 .form-list {
