--- a/src/components/screens/Header.css
+++ b/src/components/screens/Header.css
@@ -1,20 +1,19 @@
 nav {
-    display: flex;
+    
+    flex-direction: column;
+    text-align: center;
     justify-content: space-between;
-    border: 2px solid red;
     background-color: rgb(47, 44, 63);
     color: white;
 }
 
 .nav-bar {
-    border: 2px solid black;
     display: flex;
-    /* flex-direction: column; */
     justify-content: space-evenly;
     width: 50vw;
     align-items: flex-end;
-    font-size: 30px;
-    padding-bottom: 20px;
+    font-size: 150%;
+    padding-bottom: 0;
 
 }
 
@@ -24,6 +23,12 @@ nav {
 }
 
 .logo {
-    width: 10%;
-    height:10%
+    width: 18%;
+    height:18%
+}
+
+.blue {
+    color: black !important;
+    background-color: white;
+    
 }
