--- a/src/components/screens/AddMovie.css
+++ b/src/components/screens/AddMovie.css
@@ -6,7 +6,6 @@
 
 .top {
     margin: 0;
-    border: 2px solid rgb(82, 82, 155)
 
 }
 
@@ -31,6 +30,15 @@ form input {
     height: 75vh;
     display: flex;
     flex-direction: column;
-    border: 2px solid brown
 
+}
+
+.submit-btn {
+    width: 10%;
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.4);
+    background-color: #7D80FF;
+    color: white;
+    border-radius: 10%;
+    font-size: 100%;
+    cursor: pointer;
 }
