--- a/src/components/screens/Header.css
+++ b/src/components/screens/Header.css
@@ -3,7 +3,7 @@ nav {
     flex-direction: column;
     text-align: center;
     justify-content: space-between;
-    background-color: rgb(47, 44, 63);
+    background-color: #faae28;
     color: white;
 }
 
@@ -14,6 +14,7 @@ nav {
     align-items: flex-end;
     font-size: 150%;
     padding-bottom: 0;
+    margin-left: 350px;
 
 }
 
@@ -21,6 +22,7 @@ nav {
     text-decoration: none;
     color: white;
 }
+
 
 .logo {
     width: 18%;
@@ -30,5 +32,23 @@ nav {
 .blue {
     color: black !important;
     background-color: white;
+    padding: 2%;
     
+}
+
+
+@media (max-width: 500px) {
+    .nav-bar {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        margin: auto
+    }
+
+    .logo {
+        width: 40%;
+    }
+
+
 }
