--- a/src/components/screens/Movies.css
+++ b/src/components/screens/Movies.css
@@ -1,24 +1,30 @@
 .movies {
     margin: 0;
     padding: 0;
+    background-color: #1c89c9;
+}
+
+.movies h1 {
+    margin: 0;
+    padding: 2%;
 }
 
 .movieAdd {
-    color: black;
+    color: white;
+    
 }
 
 .moviePoster {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    background-color: rgb(47, 44, 63);
+    background-color: white;
     justify-content: space-between;
 
 } 
 
 .moviePoster h1 {
     font-size: 40px;
-    margin-top: 10px;
 }
 
 .moviePoster img {
@@ -39,10 +45,13 @@
 
 .movie-container {
     width: 30vw;
-    background-color: #787586;
+    background-color: #faae28;
     margin: 20px;
     overflow: scroll;
+    border-radius: 12%;
+    box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4);
 }
+
 
 .movieAdd a {
     text-decoration: none;
@@ -52,7 +61,7 @@
 .btn-style {
     display: flex;
     justify-content: center;
-    background-color: #ddd;
+    background-color: #f3b700;
     border: none;
     color: black;
     padding: 16px 32px;
@@ -65,6 +74,26 @@
 }
 
 .btn-style:hover {
-    background-color: #3e8e41;
+    background-color: #b82601;
     color: white;
+}
+
+@media (max-width: 500px) {
+    .moviePoster h1 {
+        font-size: 20px;
+    }
+    
+    .moviePoster h2 {
+        font-size: 15px;
+    }
+
+    .movie-container {
+        width: 40vw;
+    }
+
+    .movie-container .image-url {
+        width: 100%;
+        height: 60%;
+    
+    }
 }
