--- a/src/components/screens/AddMovie.css
+++ b/src/components/screens/AddMovie.css
@@ -15,35 +15,15 @@ form {
 	flex-direction: column;
 	width: 80%;
 	margin-top: 5%;
-	/* background-color: #f8f8f8; */
+	background-color: #f8f8f8;
 	border-radius: 4px;
 	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.4);
 	padding-top: 1em;
 }
 
 form input {
-	/* margin: 1em auto;
-    width: 80%; */
-    padding-top: 20px;
-	padding-left: 10px;
-	width: 100%;
-	height: 100%;
-	font-size: 1rem;
-	border: none;
-	outline: none;
-}
-
-.form-list label {
-    width: 100%;
-	height: 100%;
-	border-bottom: 2px solid #b0bec5;
-	background: transparent;
-}
-
-.form-list label::after {
-    border-bottom: 5px solid #81c784;
-	transition: all 0.4s ease;
-	background: transparent;
+	margin: 1em auto;
+	width: 80%;
 }
 
 .form-list {
