--- a/src/components/screens/Movies.css
+++ b/src/components/screens/Movies.css
@@ -78,6 +78,22 @@
     color: white;
 }
 
+.modal{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border-radius: 5px;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 50%;
+    left: 25%;
+    width: 50%;
+    z-index: 2;
+    box-shadow: 2px black;
+}
+
 @media (max-width: 500px) {
     .moviePoster h1 {
         font-size: 20px;
