--- a/src/components/shared/Button.css
+++ b/src/components/shared/Button.css
@@ -15,3 +15,35 @@
 
 
 }
+
+.movie-container button {
+    appearance: none;
+    background-color: transparent;
+    border-radius: 0.6em;
+    cursor: pointer;
+    display: flex;
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1;
+    margin: 10px;
+    padding: 1.2em 2.8em;
+    text-decoration: none;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    border-color:#b82601;
+    color: #fff;
+    box-shadow: 0 0 40px 40px #b82601 inset, 0 0 0 0 #b82601;
+    transition: all 150ms ease-in-out;
+    position: relative;
+}
+
+.movie-container button:hover {
+    box-shadow: 0 0 10px 0 #b82601 inset, 0 0 10px 4px #b82601;
+}
+
+.modal button {
+
+}
